# rules

./: .gitignore  Makefile.am  configure.ac
default/: .gitignore
